--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rajpatel</groupId>
@@ -9,31 +9,31 @@
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Spring Boot ECS App</name>
-    <description>Spring Boot application for ECS deployment</description>
-
     <properties>
         <java.version>17</java.version>
         <spring-boot.version>2.7.10</spring-boot.version>
     </properties>
 
     <dependencies>
-        <!-- Spring Boot Web for REST APIs -->
+        <!-- Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
 
-        <!-- Optional: Actuator for health checks -->
+        <!-- Actuator (Optional) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
 
-        <!-- Optional: Test support -->
+        <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -55,5 +55,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
